--- a/scrivici.html
+++ b/scrivici.html
@@ -187,35 +187,39 @@
       </div>
     </nav>
 
-		<section class="container-fluid">
+		<section class="container">
         <ol class="breadcrumb">
             <li><a href="index.html">Home</a></li>
             <li class="active">Scrivici</li>
           </ol>
-			<h2 class="text-center">SCRIVICI</h2>
-			<div class="row">
-				<div class="col-sm-5">
-					<p>Contact us and we'll get back to you within 24 hours.</p>
-					<p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
-					<p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
-					<p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
-				</div>
-				<div class="col-sm-7 slideanim">
-					<div class="row">
-						<div class="col-sm-6 form-group">
-							<input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-						</div>
-						<div class="col-sm-6 form-group">
-							<input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-						</div>
-					</div>
-					<textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
-					<div class="row">
-						<div class="col-sm-12 form-group">
-							<button class="btn btn-default pull-right" type="submit">Send</button>
-						</div>
-					</div>
-				</div>
+      <div class="jumbotron">    
+			<h1>Scrivici</h1><br>
+  			<div class="row">
+  				
+  				<div class="col-sm-7 slideanim">
+  					<div class="row">
+  						<div class="col-sm-6 form-group">
+  							<input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+  						</div>
+  						<div class="col-sm-6 form-group">
+  							<input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+  						</div>
+  					</div>
+  					<textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+  					<div class="row">
+  						<div class="col-sm-12 form-group">
+  							<button class="btn btn-default pull-right" type="submit">Send</button>
+  						</div>
+  					</div>
+          </div>
+          <div class="col-sm-1"></div>
+          <div class="col-sm-4">
+            <p>Contact us and we'll get back to you within 24 hours.</p>
+            <footer><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</footer>
+            <footer><span class="glyphicon glyphicon-phone"></span> +00 1515151515</footer>
+            <footer><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</footer>
+          </div>
+  			</div>
 			</div>
 		</section>
 
