--- a/esperienza.html
+++ b/esperienza.html
@@ -207,7 +207,7 @@
       <section class="row">
         <div class="col-sm-6">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media"></iframe>
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
         <div class="col-sm-6 visible-xs"><hr></div>
