--- a/videofiltrato.html
+++ b/videofiltrato.html
@@ -186,16 +186,16 @@
 	<main class="container">
 		<ol class="breadcrumb">
 			<li><a href="index.html">Home</a></li>
-			<li><a href="foto.html">Foto Gallery</a></li>
+			<li><a href="video.html">Video Gallery</a></li>
 			<li class="active">Filtro</li>
 		</ol>
 		
 		<div class="panel panel-default">
 			<header class="panel-heading">
 				<h1>
-					Space Shroom Foto Gallery
+					Space Shroom Video Gallery
 				</h1>
-				<p class="lead">Galleria delle nostre foto.</p>
+				<p class="lead">Galleria dei nostri video.</p>
 			</header>
 
 			<div class="panel-body">
@@ -207,7 +207,7 @@
 							</p>
 						</div>
 						<div class="col-xs-6 col-xs-offset-6 col-sm-3 col-sm-offset-0">
-						<a href="foto.html">
+						<a href="video.html">
 							<button href="#" class="btn btn-success btn-block">Elimina filtri</button>
 						</a>
 						</div>
@@ -219,9 +219,10 @@
 				<div class="row">
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
-							<a href="foto1.html">
-								<img src="img/img3.jpg" alt="">
-							</a>
+							<h4>Titolo</h4>
+				         	<div class="embed-responsive embed-responsive-16by9 div_style">
+				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				         	</div>
 							<div class="caption pull">
 								<small> Tags:</small>
 								<span class="btn label label-primary">Space</span>
@@ -231,9 +232,10 @@
 					</div>
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
-							<a href="#">
-								<img src="img/img3.jpg" alt="">
-							</a>
+							<h4>Titolo</h4>
+				         	<div class="embed-responsive embed-responsive-16by9 div_style">
+				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				         	</div>
 							<div class="caption">
 								<small> Tags:</small>
 								<span class="btn label label-danger">Astronauts</span>
@@ -243,9 +245,10 @@
 					</div>
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
-							<a href="#">
-								<img src="img/img3.jpg" alt="">
-							</a>
+							<h4>Titolo</h4>
+				         	<div class="embed-responsive embed-responsive-16by9 div_style">
+				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				         	</div>
 							<div class="caption">
 								<small> Tags:</small>
 								<span class="btn label label-success">Earth</span>
@@ -254,9 +257,10 @@
 					</div>
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
-							<a href="#">
-								<img src="img/img3.jpg" alt="">
-							</a>
+							<h4>Titolo</h4>
+				         	<div class="embed-responsive embed-responsive-16by9 div_style">
+				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				         	</div>
 							<div class="caption">
 								<small> Tags:</small>
 								<span class="btn label label-success">Earth</span>
@@ -268,9 +272,10 @@
 					</div>
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
-							<a href="#">
-								<img src="img/img3.jpg" alt="">
-							</a>
+							<h4>Titolo</h4>
+				         	<div class="embed-responsive embed-responsive-16by9 div_style">
+				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				         	</div>
 							<div class="caption">
 								<small> Tags:</small>
 								<span class="btn label label-info">Sky</span>
