--- a/indexlogged.html
+++ b/indexlogged.html
@@ -47,7 +47,7 @@
                 </li>
                 <li role="separator" class="divider"></li>
                 <li>
-                  <a href="#">Missione circumlunare</a>
+                  <a href="esperienza.html">Missione circumlunare</a>
                 </li>
                 <li>
                   <a href="#">Volo a gravità zero</a>
@@ -92,7 +92,7 @@
                   <a href="foto.html">Foto gallery</a>
                 </li>
                 <li>
-                  <a href="#">Video gallery</a>
+                  <a href="video.html">Video gallery</a>
                 </li>
               </ul>
             </li>
