--- a/esperienze.html
+++ b/esperienze.html
@@ -190,7 +190,7 @@
 			</ol>
 
 			<div class="panel panel-default">
-				<header class="panel-heading well">
+				<header class="panel-heading">
 					<h1>Le nostre esperienze</h1>
 					<p class="lead">Shroom Space ti offre dei momenti indimenticabili!</p>
 				</header>
