--- a/copyright_logged.html
+++ b/copyright_logged.html
@@ -39,11 +39,11 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="esperienze.html">Catalogo completo</a>
+                  <a href="esperienze_logged.html">Catalogo completo</a>
                 </li>
                 <li role="separator" class="divider"></li>
                 <li>
-                  <a href="esperienza.html">Missione circumlunare</a>
+                  <a href="esperienza_logged.html">Missione circumlunare</a>
                 </li>
                 <li>
                   <a href="#">Volo a gravità zero</a>
@@ -72,11 +72,11 @@
             </li>
             <!-- News -->
             <li>
-              <a href="news.html">News</a>
+              <a href="news_logged.html">News</a>
             </li>
             <!-- Blog -->
             <li>
-              <a href="blog.html">Blog</a>
+              <a href="blog_logged.html">Blog</a>
             </li>
             <!-- Multimedia -->
             <li class="dropdown">
@@ -85,16 +85,16 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="foto.html">Foto gallery</a>
+                  <a href="foto_logged.html">Foto gallery</a>
                 </li>
                 <li>
-                  <a href="video.html">Video gallery</a>
+                  <a href="video_logged.html">Video gallery</a>
                 </li>
               </ul>
             </li>
             <!-- Partners -->
             <li>
-              <a href="partners.html">Partners</a>
+              <a href="partners_logged.html">Partners</a>
             </li>
             <!-- Chi siamo -->
             <li class="dropdown">
@@ -103,16 +103,16 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="vision.html">Vision</a>
+                  <a href="vision_logged.html">Vision</a>
                 </li>
                 <li>
-                  <a href="storia.html">Storia</a>
+                  <a href="storia_logged.html">Storia</a>
                 </li>
                 <li>
-                  <a href="team.html">Il Team</a>
+                  <a href="team_logged.html">Il Team</a>
                 </li>
                 <li>
-                  <a href="opportunita.html">Opportunità lavorative</a>
+                  <a href="opportunita_logged.html">Opportunità lavorative</a>
                 </li>
               </ul>
             </li>
@@ -123,10 +123,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="scrivici.html">Scrivici</a>
+                  <a href="scrivici_logged.html">Scrivici</a>
                 </li>
                 <li>
-                  <a href="mappa.html">Dove trovarci</a>
+                  <a href="mappa_logged.html">Dove trovarci</a>
                 </li>
               </ul>
             </li>
@@ -140,13 +140,13 @@
                   <a href="user.html">Profilo utente</a>
                 </li>
                 <li>
-                  <a href=".">Logout</a>
+                  <a href="index.html">Logout</a>
                 </li>
               </ul>
             </li>
             <!-- Ricerca -->
             <li>
-              <a href="ricercaglobale.html">
+              <a href="ricercaglobale_logged.html">
                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                 <span class="hidden-md hidden-lg"> Cerca nel sito</span>
               </a>
@@ -159,7 +159,7 @@
     <main class="container">
 
       <ol class="breadcrumb">
-				<li><a href="index.html">Home</a></li>
+				<li><a href="indexlogged.html">Home</a></li>
         <li class="active">Copyright</li>
 			</ol>
       
