--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="style/screen.css">
 		<link rel="stylesheet" href="style/print.css">
 		<link rel="stylesheet" href="style/bootstrap_local/css/bootstrap.min.css">
-		<link rel="icon" type="image/png" href="/favicon.ico">
+		<link rel="icon" type="image/png" href="/img/3232.png">
 	</head>
 
 	<body>
