--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="style/screen.css">
 		<link rel="stylesheet" href="style/print.css">
 		<link rel="stylesheet" href="style/bootstrap_local/css/bootstrap.min.css">
-		<link rel="icon" type="image/x-icon" href="/img/3232.png">
+		<link rel="icon" type="image/x-icon" href="img/1616.png">
 	</head>
 
 	<body>
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href=".">Shroom Space Ind.</a>
+          <a class="pull-left" href="index.html"><img src="img/1616.png"></a></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
