--- a/news_logged.html
+++ b/news_logged.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href=".">Shroom Space Ind.</a>
+          <a class="navbar-brand" href="indexlogged.html">Shroom Space Ind.</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -159,7 +159,7 @@
     <main class="container">
 
       <ol class="breadcrumb">
-				<li><a href="index_logged.html">Home</a></li>
+				<li><a href="indexlogged.html">Home</a></li>
         <li class="active">News</li>
 			</ol>
       
