--- a/carrello.html
+++ b/carrello.html
@@ -176,7 +176,7 @@
                 <img class="media-object img-rounded img-responsive" src="img/img1.jpg">
               </div>
               <div class="col-md-6">
-                <h2>Esperienza</h2>
+                <h2>Esperienza</h2><br>
                 <a href="esperienza_logged.html">
                   <input type="button" class="btn btn-info btn-md" value="Dettagli esperienza">
                 </a>
@@ -184,7 +184,7 @@
               <div class="col-md-3">
                 <h3>Prezzo:</h3>
                 <h4 class="text-danger">USD 5.000.000,00</h4>
-                 <a href="#">
+                 <a href="esperienza_logged.html">
                   <input type="button" class="btn btn-danger btn-md" value="Rimuovi dal carrello">
                 </a>
               </div>
