--- a/pagamento.html
+++ b/pagamento.html
@@ -176,7 +176,7 @@
 					<div class="row">
 						<form class="form-horizontal">
 								<div class="form-group">
-									<label class="col-sm-4 control-label" for="country">Tipo pagamento</label>
+									<label class="col-sm-4 control-label" for="country">Tipo pagamento:</label>
 									<div class="col-sm-2">
 										<select id="type" name="type" class="form-control">
 											<option value="Visa">Visa</option>
@@ -188,14 +188,14 @@
 
 								<!-- Nome e cognome -->
 								<div class="form-group">
-									<label class="col-sm-4 control-label" for="Name">Nome</label>  
+									<label class="col-sm-4 control-label" for="Name">Nome:</label>  
 									<div class="col-sm-5">
 										<input id="Name" name="Name" type="text" placeholder="Nome" class="form-control input-md" required="">
 									</div>
 								</div>
 
 								<div class="form-group">
-									<label class="col-sm-4 control-label" for="Name">Cognome</label>  
+									<label class="col-sm-4 control-label" for="Name">Cognome:</label>  
 									<div class="col-sm-5">
 										<input id="Surname" name="Surname" type="text" placeholder="Cognome" class="form-control input-md" required="">
 									</div>
@@ -203,7 +203,7 @@
 
 								<!-- Selezione paese -->
 								<div class="form-group">
-									<label class="col-sm-4 control-label" for="country">Paese</label>
+									<label class="col-sm-4 control-label" for="country">Paese:</label>
 									<div class="col-sm-5">
 										<select id="country" name="country" class="form-control">
 											<option value="Italia">Italia</option>
@@ -218,14 +218,14 @@
 
 								<!-- Numero carta -->
 								<div class="form-group">
-									<label class="col-sm-4 control-label" for="mobilenumber">Numero carta</label>  
+									<label class="col-sm-4 control-label" for="mobilenumber">Numero carta:</label>  
 									<div class="col-sm-5">
 										<input id="cardnumber" name="cardnumber" type="text" placeholder="Numero" class="form-control input-md" required="">
 									</div>
 								</div>
 
 								<div class="form-group">
-									<label class="col-sm-4 control-label" for="expire">Data di scadenza (mm/aaaa)</label>
+									<label class="col-sm-4 control-label" for="expire">Data di scadenza (mm/aaaa):</label>
 									<div class="col-sm-2">
 										<select id="type" name="type" class="form-control">
 											<option value="1">1</option>
@@ -245,8 +245,14 @@
 									<div class="col-sm-2">
 											<input id="cardnumber" name="cardnumber" type="text" placeholder="aaaa" class="form-control input-md" required="">
 									</div>								
-								</div>									
+								</div>
 
+								<div class="form-group">
+									<label class="col-sm-4 control-label" for="verify">Codice di verifica:</label>  
+									<div class="col-sm-2">
+										<input id="verify" name="verify" type="text" placeholder="123" class="form-control input-md" required="">
+									</div>	
+								</div>								
 
 
 
